--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
         <p>클래스 안내 섹션에서 프로그램 설명을 확인 후 신청 폼을 작성하시면 참가 안내를 드립니다.</p>
       </details>
     </section>
+    <section id="contact">
+      <h2>1:1 상담 신청</h2>
+      <p>학생의 상황과 목표에 맞춘 맞춤 상담을 원하신다면 아래 버튼을 눌러주세요.</p>
+      <a href="https://tally.so/r/w7Jqdz" target="_blank" class="button">1:1 상담 신청하기</a>
+    </section>
   </main>
 
   <footer>
