Update hero heading text in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </ul>
     </nav>
     <div class="hero">
-      <h1>학생의 성장에 함께합니다</h1>
+      <h1>공부도 취미가 될 수 있다</h1>
       <h2>진로를 찾고 스스로 설계하는 힘</h2>
     </div>
   </header>
