Update contact email in footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SehyunT</title>
   <link rel="stylesheet" href="style.css" />
+<!-- 토스페이먼츠 SDK -->
+<script src="https://js.tosspayments.com/v1/payment"></script>  
 </head>
 <body>
   <header>
@@ -96,7 +98,7 @@
     </section>
   </main>
   <footer>
-    <p>© 2025 조세연 | 문의: sehyun@domain.com</p>
+    <p>© 2025 조세연 | 문의: ahrah0365@gmail.com</p>
   </footer>
 
   <script src="script.js"></script>
