--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX'); // 실제 GA ID로 변경
+  </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SehyunT</title>
@@ -46,26 +54,26 @@
   </header>
 
   <!-- 이미지 슬라이더 추가 -->
-  <div class="slider-container">
-    <div class="slider" id="slider">
-      <div class="slide">
-        <img src="images/slide1.jpg" alt="슬라이드 1">
-      </div>
-      <div class="slide">
-        <img src="images/slide2.jpg" alt="슬라이드 2">
-      </div>
-      <div class="slide">
-        <img src="images/slide3.jpg" alt="슬라이드 3">
-      </div>
+<div class="slider-container">
+  <div class="slider" id="slider">
+    <div class="slide">
+      <img src="images/slide1.jpg" alt="합격 사례 1" style="width:100%; height:100%; object-fit:cover;">
     </div>
-    <button class="slider-btn prev" onclick="moveSlide(-1)">‹</button>
-    <button class="slider-btn next" onclick="moveSlide(1)">›</button>
-    <div class="slider-dots">
-      <span class="dot active" onclick="currentSlide(0)"></span>
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
+    <div class="slide">
+      <img src="images/slide2.jpg" alt="합격 사례 2" style="width:100%; height:100%; object-fit:cover;">
+    </div>
+    <div class="slide">
+      <img src="images/slide3.jpg" alt="합격 사례 3" style="width:100%; height:100%; object-fit:cover;">
     </div>
   </div>
+  <button class="slider-btn prev" onclick="moveSlide(-1)">‹</button>
+  <button class="slider-btn next" onclick="moveSlide(1)">›</button>
+  <div class="slider-dots">
+    <span class="dot active" onclick="currentSlide(0)"></span>
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+  </div>
+</div>
 
   <main>
     <section id="materials">
@@ -102,6 +110,45 @@
   </footer>
 
   <script src="script.js"></script>
+<script>
+  // 토스페이먼츠 클라이언트 키 (실제 사용시 발급받아야 함)
+  const clientKey = 'test_ck_D5GePWvyJnrK0W0k6q8gLzN97Eoq';
+  const tossPayments = TossPayments(clientKey);
+
+  function purchaseItem(itemName, price) {
+    // 주문 ID 생성 (실제로는 서버에서 생성해야 함)
+    const orderId = 'ORDER_' + new Date().getTime();
+    
+    tossPayments.requestPayment('카드', {
+      amount: price,
+      orderId: orderId,
+      orderName: itemName,
+      customerName: '구매자',
+      successUrl: window.location.origin + '/success.html',
+      failUrl: window.location.origin + '/fail.html',
+    }).catch(function (error) {
+      if (error.code === 'USER_CANCEL') {
+        alert('결제를 취소하셨습니다.');
+      } else {
+        alert('결제 중 오류가 발생했습니다: ' + error.message);
+      }
+    });
+  }
+</script>
+
+<!-- 카카오톡 채널 채팅버튼 -->
+<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+<script>
+  Kakao.init('YOUR_JAVASCRIPT_KEY'); // 카카오 개발자 사이트에서 발급
+  Kakao.Channel.createChatButton({
+    container: '#kakao-chat-button',
+    channelPublicId: '_your_channel_id' // 카카오톡 채널 ID
+  });
+</script>
+
+<!-- 카카오톡 채팅 버튼 위치 -->
+<div id="kakao-chat-button" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
+  
 </body>
 </html>
   <main>
