--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -13,9 +12,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SehyunT</title>
   <link rel="stylesheet" href="style.css" />
-<!-- 토스페이먼츠 SDK -->
-<script src="https://js.tosspayments.com/v1/payment"></script>  
+  <script src="https://js.tosspayments.com/v1/payment"></script>
+  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
 </head>
+
 <body>
   <header>
     <nav>
@@ -30,87 +30,21 @@
       <h2>진로를 찾고 스스로 설계하는 힘</h2>
     </div>
   </header>
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SehyunT</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#materials">자료실</a></li>
-        <li><a href="#programs">프로그램</a></li>
-        <li><a href="#contact">상담 신청</a></li>
-      </ul>
-    </nav>
-    <div class="hero">
-      <h1>학생의 성장에 함께합니다</h1>
-      <h2>진로를 찾고 스스로 설계하는 힘</h2>
-    </div>
-  </header>
 
-  <!-- 이미지 슬라이더 추가 -->
-<div class="slider-container">
-  <div class="slider" id="slider">
-    <div class="slide">
-      <img src="images/slide1.jpg" alt="합격 사례 1" style="width:100%; height:100%; object-fit:cover;">
+  <div class="slider-container">
     </div>
-    <div class="slide">
-      <img src="images/slide2.jpg" alt="합격 사례 2" style="width:100%; height:100%; object-fit:cover;">
-    </div>
-    <div class="slide">
-      <img src="images/slide3.jpg" alt="합격 사례 3" style="width:100%; height:100%; object-fit:cover;">
-    </div>
-  </div>
-  <button class="slider-btn prev" onclick="moveSlide(-1)">‹</button>
-  <button class="slider-btn next" onclick="moveSlide(1)">›</button>
-  <div class="slider-dots">
-    <span class="dot active" onclick="currentSlide(0)"></span>
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-  </div>
-</div>
 
   <main>
-    <section id="materials">
-      <h2>학습 체크리스트</h2>
-      <p>자기주도학습 수준을 점검할 수 있는 체크리스트 및 생활기록부 관리표를 무료로 배포합니다.</p>
-    </section>
-    <section id="programs">
-      <h2>여름방학 클래스</h2>
-      <p>집중 자기주도학습 및 입시 플랜 클래스</p>
-    </section>
-    <section id="faq">
-      <h2>자주 묻는 질문</h2>
-      <details>
-        <summary>상담은 어떻게 받을 수 있나요?</summary>
-        <p>상담 신청 버튼을 통해 온라인 폼을 제출하시면 개별 연락 후 일정을 조율해드립니다.</p>
-      </details>
-      <details>
-        <summary>자료는 어떻게 다운로드하나요?</summary>
-        <p>자료실에서 원하는 리소스를 클릭하고 버튼을 누르면 즉시 다운로드하실 수 있습니다.</p>
-      </details>
-      <details>
-        <summary>여름방학 클래스 신청은 어떻게 하나요?</summary>
-        <p>클래스 안내 섹션에서 프로그램 설명을 확인 후 신청 폼을 작성하시면 참가 안내를 드립니다.</p>
-      </details>
-    </section>
-    <section id="contact">
-      <h2>1:1 상담 신청</h2>
-      <p>학생의 상황과 목표에 맞춘 맞춤 상담을 원하신다면 아래 버튼을 눌러주세요.</p>
-      <a href="https://tally.so/r/w7Jqdz" target="_blank" class="button">1:1 상담 신청하기</a>
-    </section>
-  </main>
+    </main>
+
   <footer>
     <p>© 2025 조세연 | 문의: ahrah0365@gmail.com</p>
   </footer>
 
+  <div id="kakao-chat-button" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
+
   <script src="script.js"></script>
-<script>
+  <script>
   // 토스페이먼츠 클라이언트 키 (실제 사용시 발급받아야 함)
   const clientKey = 'test_ck_D5GePWvyJnrK0W0k6q8gLzN97Eoq';
   const tossPayments = TossPayments(clientKey);
