--- a/index.html
+++ b/index.html
@@ -1,125 +1,104 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX'); // 실제 GA ID로 변경
-  </script>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SehyunT</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://js.tosspayments.com/v1/payment"></script>
-  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SehyunT | 학생의 성장을 함께하는 입시 컨설팅</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script> <!-- Tailwind CSS 추가 -->
 </head>
+<body class="bg-gray-50">
 
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#materials">자료실</a></li>
-        <li><a href="#programs">프로그램</a></li>
-        <li><a href="#contact">상담 신청</a></li>
-      </ul>
-    </nav>
-    <div class="hero">
-      <h1>공부도 취미가 될 수 있다</h1>
-      <h2>진로를 찾고 스스로 설계하는 힘</h2>
-    </div>
-  </header>
+    <!-- Header & Navigation -->
+    <header class="bg-white shadow-sm sticky top-0 z-50">
+        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
+            <a href="index.html" class="text-2xl font-bold text-gray-800">SehyunT</a>
+            <ul class="flex items-center space-x-6">
+                <li><a href="about.html" class="text-gray-600 hover:text-blue-600">선생님 소개</a></li>
+                <li><a href="consulting.html" class="text-gray-600 hover:text-blue-600">컨설팅 프로그램</a></li>
+                <li><a href="store.html" class="text-gray-600 hover:text-blue-600">자료/강의</a></li>
+                <li><a href="#contact" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <div class="slider-container">
-    </div>
+    <main>
+        <!-- Hero Section -->
+        <section class="hero text-center py-20 bg-white">
+            <h1 class="text-5xl font-extrabold text-gray-900">결과로 증명하는 입시 전략</h1>
+            <h2 class="text-xl text-gray-600 mt-4 max-w-2xl mx-auto">세연쌤과 함께라면 막막한 입시는 가장 강력한 무기가 됩니다.</h2>
+            <a href="#contact" class="mt-8 inline-block bg-blue-600 text-white text-lg font-semibold px-8 py-3 rounded-lg hover:bg-blue-700 transition">지금 바로 상담 신청하기</a>
+        </section>
 
-  <main>
+        <!-- 이미지 슬라이더 (기존 코드 유지 또는 개선) -->
+        <div class="slider-container my-12">
+            <!-- 슬라이더 HTML은 기존과 동일하게 사용 -->
+        </div>
+
+        <!-- Services Section -->
+        <section id="services" class="py-16">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-3xl font-bold mb-2">세연쌤 컨설팅 프로그램</h2>
+                <p class="text-gray-600 mb-12">학생의 현재 위치와 목표에 최적화된 로드맵을 제시합니다.</p>
+                <div class="grid md:grid-cols-3 gap-8">
+                    <!-- 초등 학부모 대상 -->
+                    <div class="bg-white p-8 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">초등 학부모 코칭 (초1~5)</h3>
+                        <p class="text-gray-600 mb-4">우리 아이 잠재력을 최대로 이끌어내는 학부모 교육</p>
+                        <a href="consulting.html#elementary" class="text-blue-600 font-semibold hover:underline">자세히 보기 &rarr;</a>
+                    </div>
+                    <!-- 중등 자기주도학습 -->
+                    <div class="bg-white p-8 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">중등 자기주도학습 (초6~중2)</h3>
+                        <p class="text-gray-600 mb-4">공부의 '틀'을 만들고 최상위권으로 도약하는 습관 형성</p>
+                        <a href="consulting.html#middle" class="text-blue-600 font-semibold hover:underline">자세히 보기 &rarr;</a>
+                    </div>
+                    <!-- 고등 입시 컨설팅 -->
+                    <div class="bg-white p-8 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">대학 입시 컨설팅 (중3~고3)</h3>
+                        <p class="text-gray-600 mb-4">대입/고입 성공을 위한 생기부, 학습, 수시/정시 전략 완성</p>
+                        <a href="consulting.html#high" class="text-blue-600 font-semibold hover:underline">자세히 보기 &rarr;</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Testimonials Section (새로 추가) -->
+        <section id="testimonials" class="py-16 bg-white">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-3xl font-bold mb-12">성공 사례가 증명합니다</h2>
+                <div class="grid md:grid-cols-3 gap-8 text-left">
+                    <div class="p-6 border rounded-lg">
+                        <p class="text-gray-700">"성적이 중위권이라 막막했는데, 선생님 덕분에 생기부 방향을 잡고 OO대 합격했습니다!"</p>
+                        <p class="mt-4 font-bold">- OOO 학생 (OO대 합격)</p>
+                    </div>
+                    <div class="p-6 border rounded-lg">
+                        <p class="text-gray-700">"컨설팅 받고 아이가 스스로 공부 계획을 세우기 시작했어요. 정말 신기해요."</p>
+                        <p class="mt-4 font-bold">- OOO 학부모 (중1)</p>
+                    </div>
+                    <div class="p-6 border rounded-lg">
+                        <p class="text-gray-700">"자료 퀄리티가 정말 높아요. 혼자 준비했다면 절대 몰랐을 정보들을 얻었습니다."</p>
+                        <p class="mt-4 font-bold">- OOO 학생 (고3)</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="py-20 bg-gray-800 text-white text-center">
+             <div class="container mx-auto px-6">
+                <h2 class="text-4xl font-bold">변화는 지금 시작됩니다</h2>
+                <p class="text-lg text-gray-300 mt-4">망설이는 순간, 경쟁자는 이미 앞서가고 있습니다.<br>세연쌤과의 1:1 상담으로 합격의 문을 여세요.</p>
+                <a href="https://tally.so/r/w7Jqdz" target="_blank" class="mt-8 inline-block bg-white text-blue-600 text-xl font-bold px-10 py-4 rounded-lg hover:bg-gray-200 transition">
+                    1:1 맞춤 상담 신청하기
+                </a>
+             </div>
+        </section>
     </main>
 
-  <footer>
-    <p>© 2025 조세연 | 문의: ahrah0365@gmail.com</p>
-  </footer>
+    <footer class="text-center py-6 bg-gray-100">
+        <p>© 2025 SehyunT 조세연 | 문의: ahrah0365@gmail.com</p>
+    </footer>
 
-  <div id="kakao-chat-button" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
-
-  <script src="script.js"></script>
-  <script>
-  // 토스페이먼츠 클라이언트 키 (실제 사용시 발급받아야 함)
-  const clientKey = 'test_ck_D5GePWvyJnrK0W0k6q8gLzN97Eoq';
-  const tossPayments = TossPayments(clientKey);
-
-  function purchaseItem(itemName, price) {
-    // 주문 ID 생성 (실제로는 서버에서 생성해야 함)
-    const orderId = 'ORDER_' + new Date().getTime();
-    
-    tossPayments.requestPayment('카드', {
-      amount: price,
-      orderId: orderId,
-      orderName: itemName,
-      customerName: '구매자',
-      successUrl: window.location.origin + '/success.html',
-      failUrl: window.location.origin + '/fail.html',
-    }).catch(function (error) {
-      if (error.code === 'USER_CANCEL') {
-        alert('결제를 취소하셨습니다.');
-      } else {
-        alert('결제 중 오류가 발생했습니다: ' + error.message);
-      }
-    });
-  }
-</script>
-
-<!-- 카카오톡 채널 채팅버튼 -->
-<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-<script>
-  Kakao.init('YOUR_JAVASCRIPT_KEY'); // 카카오 개발자 사이트에서 발급
-  Kakao.Channel.createChatButton({
-    container: '#kakao-chat-button',
-    channelPublicId: '_your_channel_id' // 카카오톡 채널 ID
-  });
-</script>
-
-<!-- 카카오톡 채팅 버튼 위치 -->
-<div id="kakao-chat-button" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
-  
-</body>
-</html>
-  <main>
-    <section id="materials">
-      <h2>학습 체크리스트</h2>
-      <p>자기주도학습 수준을 점검할 수 있는 체크리스트 및 생활기록부 관리표를 무료로 배포합니다.</p>
-    </section>
-
-    <section id="programs">
-      <h2>여름방학 클래스</h2>
-      <p>집중 자기주도학습 및 입시 플랜 클래스</p>
-    </section>
-
-    <section id="faq">
-      <h2>자주 묻는 질문</h2>
-      <details>
-        <summary>상담은 어떻게 받을 수 있나요?</summary>
-        <p>상담 신청 버튼을 통해 온라인 폼을 제출하시면 개별 연락 후 일정을 조율해드립니다.</p>
-      </details>
-      <details>
-        <summary>자료는 어떻게 다운로드하나요?</summary>
-        <p>자료실에서 원하는 리소스를 클릭하고 버튼을 누르면 즉시 다운로드하실 수 있습니다.</p>
-      </details>
-      <details>
-        <summary>여름방학 클래스 신청은 어떻게 하나요?</summary>
-        <p>클래스 안내 섹션에서 프로그램 설명을 확인 후 신청 폼을 작성하시면 참가 안내를 드립니다.</p>
-      </details>
-    </section>
-    <section id="contact">
-      <h2>1:1 상담 신청</h2>
-      <p>학생의 상황과 목표에 맞춘 맞춤 상담을 원하신다면 아래 버튼을 눌러주세요.</p>
-      <a href="https://tally.so/r/w7Jqdz" target="_blank" class="button">1:1 상담 신청하기</a>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2025 조세연 | 문의: sehyun@domain.com</p>
-  </footer>
 </body>
 </html>
