--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SehyunT | 학생의 성장을 함께하는 입시 컨설팅</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.tailwindcss.com"></script> <!-- Tailwind CSS 추가 -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50">
 
@@ -17,7 +17,7 @@
                 <li><a href="about.html" class="text-gray-600 hover:text-blue-600">선생님 소개</a></li>
                 <li><a href="consulting.html" class="text-gray-600 hover:text-blue-600">컨설팅 프로그램</a></li>
                 <li><a href="store.html" class="text-gray-600 hover:text-blue-600">자료/강의</a></li>
-                <li><a href="#contact" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
+                <li><a href="https://tally.so/r/w4l51A" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
             </ul>
         </nav>
     </header>
@@ -27,7 +27,7 @@
         <section class="hero text-center py-20 bg-white">
             <h1 class="text-5xl font-extrabold text-gray-900">결과로 증명하는 입시 전략</h1>
             <h2 class="text-xl text-gray-600 mt-4 max-w-2xl mx-auto">세연쌤과 함께라면 막막한 입시는 가장 강력한 무기가 됩니다.</h2>
-            <a href="#contact" class="mt-8 inline-block bg-blue-600 text-white text-lg font-semibold px-8 py-3 rounded-lg hover:bg-blue-700 transition">지금 바로 상담 신청하기</a>
+            <a href="https://tally.so/r/w4l51A" target="_blank" class="mt-8 inline-block bg-blue-600 text-white text-lg font-semibold px-8 py-3 rounded-lg hover:bg-blue-700 transition">지금 바로 상담 신청하기</a>
         </section>
 
         <!-- 이미지 슬라이더 (기존 코드 유지 또는 개선) -->
@@ -41,22 +41,19 @@
                 <h2 class="text-3xl font-bold mb-2">세연쌤 컨설팅 프로그램</h2>
                 <p class="text-gray-600 mb-12">학생의 현재 위치와 목표에 최적화된 로드맵을 제시합니다.</p>
                 <div class="grid md:grid-cols-3 gap-8">
-                    <!-- 초등 학부모 대상 -->
                     <div class="bg-white p-8 rounded-lg shadow-md">
-                        <h3 class="text-xl font-bold mb-2">초등 학부모 코칭 (초1~5)</h3>
-                        <p class="text-gray-600 mb-4">우리 아이 잠재력을 최대로 이끌어내는 학부모 교육</p>
+                        <h3 class="text-xl font-bold mb-2">초등 자기주도학습</h3>
+                        <p class="text-gray-600 mb-4">공부의 '즐거움'을 깨우치는 학부모 코칭</p>
                         <a href="consulting.html#elementary" class="text-blue-600 font-semibold hover:underline">자세히 보기 &rarr;</a>
                     </div>
-                    <!-- 중등 자기주도학습 -->
                     <div class="bg-white p-8 rounded-lg shadow-md">
-                        <h3 class="text-xl font-bold mb-2">중등 자기주도학습 (초6~중2)</h3>
-                        <p class="text-gray-600 mb-4">공부의 '틀'을 만들고 최상위권으로 도약하는 습관 형성</p>
+                        <h3 class="text-xl font-bold mb-2">중등 입시/학습</h3>
+                        <p class="text-gray-600 mb-4">특목·자사고부터 대입까지 내다보는 전략 수립</p>
                         <a href="consulting.html#middle" class="text-blue-600 font-semibold hover:underline">자세히 보기 &rarr;</a>
                     </div>
-                    <!-- 고등 입시 컨설팅 -->
                     <div class="bg-white p-8 rounded-lg shadow-md">
-                        <h3 class="text-xl font-bold mb-2">대학 입시 컨설팅 (중3~고3)</h3>
-                        <p class="text-gray-600 mb-4">대입/고입 성공을 위한 생기부, 학습, 수시/정시 전략 완성</p>
+                        <h3 class="text-xl font-bold mb-2">고등 입시 전략</h3>
+                        <p class="text-gray-600 mb-4">수시·정시를 아우르는 최종 합격 컨설팅</p>
                         <a href="consulting.html#high" class="text-blue-600 font-semibold hover:underline">자세히 보기 &rarr;</a>
                     </div>
                 </div>
@@ -68,17 +65,20 @@
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-3xl font-bold mb-12">성공 사례가 증명합니다</h2>
                 <div class="grid md:grid-cols-3 gap-8 text-left">
-                    <div class="p-6 border rounded-lg">
-                        <p class="text-gray-700">"성적이 중위권이라 막막했는데, 선생님 덕분에 생기부 방향을 잡고 OO대 합격했습니다!"</p>
-                        <p class="mt-4 font-bold">- OOO 학생 (OO대 합격)</p>
+                    <div class="p-6 border rounded-lg bg-gray-50">
+                        <h4 class="font-bold text-blue-600 mb-2">생기부 컨설팅 사례</h4>
+                        <p class="text-gray-700">"수행평가 주제부터 보고서 개요까지 선생님이 옆에서 잡아주시니까 아이가 금세 스스로 글을 써 내려갔어요. 생활기록부가 점점 채워지면서 아이가 달라졌습니다."</p>
+                        <p class="mt-4 font-semibold text-right">- 합격생 학부모</p>
                     </div>
-                    <div class="p-6 border rounded-lg">
-                        <p class="text-gray-700">"컨설팅 받고 아이가 스스로 공부 계획을 세우기 시작했어요. 정말 신기해요."</p>
-                        <p class="mt-4 font-bold">- OOO 학부모 (중1)</p>
+                    <div class="p-6 border rounded-lg bg-gray-50">
+                        <h4 class="font-bold text-blue-600 mb-2">내신 관리 사례</h4>
+                        <p class="text-gray-700">"내신 성적이 3점대 후반이라 학종은 어렵다고 생각했는데, 과목별 전략과 활동 정리를 함께 하면서 아이가 자신감을 되찾았습니다."</p>
+                        <p class="mt-4 font-semibold text-right">- 합격생 학부모</p>
                     </div>
-                    <div class="p-6 border rounded-lg">
-                        <p class="text-gray-700">"자료 퀄리티가 정말 높아요. 혼자 준비했다면 절대 몰랐을 정보들을 얻었습니다."</p>
-                        <p class="mt-4 font-bold">- OOO 학생 (고3)</p>
+                    <div class="p-6 border rounded-lg bg-gray-50">
+                        <h4 class="font-bold text-blue-600 mb-2">면접 준비 사례</h4>
+                        <p class="text-gray-700">"아이 말투와 논리 구조까지 꼼꼼히 잡아주셔서 실제 면접장에서 침착하게 답할 수 있었습니다."</p>
+                        <p class="mt-4 font-semibold text-right">- 합격생 학부모</p>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
              <div class="container mx-auto px-6">
                 <h2 class="text-4xl font-bold">변화는 지금 시작됩니다</h2>
                 <p class="text-lg text-gray-300 mt-4">망설이는 순간, 경쟁자는 이미 앞서가고 있습니다.<br>세연쌤과의 1:1 상담으로 합격의 문을 여세요.</p>
-                <a href="https://tally.so/r/w7Jqdz" target="_blank" class="mt-8 inline-block bg-white text-blue-600 text-xl font-bold px-10 py-4 rounded-lg hover:bg-gray-200 transition">
+                <a href="https://tally.so/r/w4l51A" target="_blank" class="mt-8 inline-block bg-white text-blue-600 text-xl font-bold px-10 py-4 rounded-lg hover:bg-gray-200 transition">
                     1:1 맞춤 상담 신청하기
                 </a>
              </div>
@@ -102,3 +102,4 @@
 
 </body>
 </html>
+
