--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50">
-    <!-- Navigation (index.html과 동일하게 유지) -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="text-2xl font-bold text-gray-800">SehyunT</a>
@@ -15,7 +14,7 @@
                 <li><a href="about.html" class="font-bold text-blue-600">선생님 소개</a></li>
                 <li><a href="consulting.html" class="text-gray-600 hover:text-blue-600">컨설팅 프로그램</a></li>
                 <li><a href="store.html" class="text-gray-600 hover:text-blue-600">자료/강의</a></li>
-                <li><a href="#contact" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
+                <li><a href="https://tally.so/r/w7Jqdz" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
             </ul>
         </nav>
     </header>
@@ -27,19 +26,46 @@
                     <img src="https://placehold.co/400x500/E2E8F0/4A5568?text=세연쌤+프로필" alt="조세연 선생님 프로필 사진" class="rounded-lg w-full">
                 </div>
                 <div class="md:col-span-2">
-                    <h1 class="text-4xl font-extrabold text-gray-900">안녕하세요,<br>입시 컨설턴트 조세연입니다.</h1>
+                    <h1 class="text-4xl font-extrabold text-gray-900 leading-tight">"공부는 억지로 하는 게 아니라,<br>취미처럼 즐길 수 있는 것입니다."</h1>
                     <p class="mt-6 text-lg text-gray-700">
-                        저는 단순히 대학에 '합격'시키는 것을 넘어, 학생들이 자신의 진로를 찾고 스스로 미래를 설계하는 힘을 기르도록 돕고 싶습니다. 
-                        수년간 수많은 학생들을 만나며 쌓아온 데이터와 노하우를 바탕으로, 학생 한 명 한 명에게 가장 최적화된 길을 안내합니다.
+                        세연쌤의 컨설팅은 학생이 스스로 몰입하고 성장할 수 있는 자기주도학습의 길을 함께 설계합니다. 
+                        단순 합격을 넘어, 학생의 인생에 공부가 즐거운 취미이자 강력한 무기가 되도록 돕겠습니다.
                     </p>
-                    <div class="mt-8 border-t pt-8">
-                        <h3 class="text-2xl font-bold mb-4">주요 약력</h3>
-                        <ul class="space-y-2 text-gray-600">
-                            <li>- 現) SehyunT 입시 컨설팅 대표</li>
-                            <li>- 前) OOO 교육 컨설턴트</li>
-                            <li>- OOO 대학교 교육학과 졸업</li>
-                            <li>- 누적 컨설팅 2,000시간 이상</li>
+                </div>
+            </div>
+
+            <div class="mt-12 border-t pt-10">
+                <div class="grid md:grid-cols-2 gap-10">
+                    <div>
+                        <h3 class="text-2xl font-bold mb-4 text-gray-800">주요 약력</h3>
+                        <ul class="space-y-3 text-gray-600">
+                            <li class="pl-4 border-l-2 border-blue-500">
+                                <strong class="block font-semibold">現) GNM학원 중·고·대입 전문 컨설턴트 (2023~2025)</strong>
+                            </li>
+                            <li class="pl-4 border-l-2 border-blue-500">
+                                <strong class="block font-semibold">자기주도학습 컨설팅 전문가 (2017~2022)</strong>
+                                <span class="text-sm">중3~고2 대상 1:1 과외 진행</span>
+                            </li>
+                            <li class="pl-4 border-l-2 border-blue-500">
+                                <strong class="block font-semibold">ITT 전문 번역사 (2017~2022)</strong>
+                                <span class="text-sm">한영/영한 전문 번역 자격 보유</span>
+                            </li>
+                             <li class="pl-4 border-l-2 border-blue-500">
+                                <strong class="block font-semibold">동국대학교 조기 입학 (만 17세)</strong>
+                                <span class="text-sm">연출/문예창작 복수전공</span>
+                            </li>
                         </ul>
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-bold mb-4 text-gray-800">25학년도 고입 전형 결과</h3>
+                        <div class="bg-gray-100 p-6 rounded-lg">
+                            <ul class="space-y-2">
+                                <li><span class="font-semibold text-blue-600">안산동산고, 수원외고, 과천외고</span>: 100% 합격</li>
+                                <li><span class="font-semibold text-blue-600">경기외고</span>: 75% 합격</li>
+                                <li><span class="font-semibold text-blue-600">외대부고</span>: 60% 합격</li>
+                                <li><span class="font-semibold text-blue-600">동탄국제고</span>: 58% 합격</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
