--- a/consulting.html
+++ b/consulting.html
@@ -7,8 +7,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50">
-
-    <!-- Navigation (index.html과 동일하게 유지) -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="text-2xl font-bold text-gray-800">SehyunT</a>
@@ -16,7 +14,7 @@
                 <li><a href="about.html" class="text-gray-600 hover:text-blue-600">선생님 소개</a></li>
                 <li><a href="consulting.html" class="font-bold text-blue-600">컨설팅 프로그램</a></li>
                 <li><a href="store.html" class="text-gray-600 hover:text-blue-600">자료/강의</a></li>
-                <li><a href="#contact" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
+                <li><a href="https://tally.so/r/w7Jqdz" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
             </ul>
         </nav>
     </header>
@@ -27,78 +25,73 @@
             <p class="text-lg text-gray-600 mt-4">세연쌤의 전문적인 컨설팅은 학생의 잠재력을 100% 끌어냅니다.</p>
         </div>
 
-        <!-- 고등 입시 컨설팅 -->
         <section id="high" class="mb-16 bg-white p-8 rounded-lg shadow-lg">
-            <h2 class="text-3xl font-bold mb-4">고등 입시 컨설팅 (중3 ~ 고3)</h2>
-            <p class="text-gray-700 mb-6">대입 성공의 모든 것, A to Z. 학생에게 꼭 맞는 맞춤형 전략을 제공합니다. (상시 진행)</p>
-            <div class="grid md:grid-cols-2 gap-6">
-                <div class="border-l-4 border-blue-500 pl-4">
-                    <h4 class="font-bold">주요 내용</h4>
-                    <ul class="list-disc list-inside text-gray-600">
-                        <li>학생부종합전형 생기부 관리</li>
-                        <li>내신/수능 학습 전략 및 플래닝</li>
-                        <li>수시 지원 대학 및 학과 선정</li>
-                        <li>면접 대비 및 컨설팅</li>
+            <h2 class="text-3xl font-bold mb-4">③ 고등 입시 전략 컨설팅 (학생 대상)</h2>
+            <div class="grid md:grid-cols-2 gap-8 mt-6">
+                <div>
+                    <h4 class="font-bold text-lg mb-2 text-blue-600">주요 내용</h4>
+                    <ul class="list-disc list-inside space-y-2 text-gray-700">
+                        <li>생활기록부(세특, 자율, 동아리, 독서) 종합 관리 및 컨설팅</li>
+                        <li>자기주도학습 코칭: 내신·수행평가·탐구 보고서 전략적 연결</li>
+                        <li>수시 전략 코칭: 학종 가능성 분석, 면접 대비, 활동 설계</li>
+                        <li>정시 전략 코칭: 내신 대비 수능 계획 수립, 학습 루틴 점검</li>
                     </ul>
                 </div>
-                <div class="border-l-4 border-green-500 pl-4">
-                    <h4 class="font-bold">이런 학생에게 추천</h4>
-                    <ul class="list-disc list-inside text-gray-600">
-                        <li>무엇을 해야 할지 막막한 학생</li>
-                        <li>생기부 관리에 어려움을 겪는 학생</li>
-                        <li>전략적인 대입 준비가 필요한 학생</li>
+                <div>
+                    <h4 class="font-bold text-lg mb-2 text-green-600">이런 학생에게 추천</h4>
+                    <ul class="list-disc list-inside space-y-2 text-gray-700">
+                        <li>생활기록부 작성이 막막하거나 공백이 있는 학생</li>
+                        <li>수시·정시 전략을 동시에 준비하고 싶은 학생</li>
+                        <li>자기주도적으로 공부하는 힘을 키우고 싶은 학생</li>
                     </ul>
                 </div>
             </div>
         </section>
 
-        <!-- 중등 자기주도학습 -->
         <section id="middle" class="mb-16 bg-white p-8 rounded-lg shadow-lg">
-            <h2 class="text-3xl font-bold mb-4">중등 자기주도학습 (초6 ~ 중2)</h2>
-            <p class="text-gray-700 mb-6">스스로 공부하는 힘을 길러 고등학교 내신 1등급의 초석을 다집니다. (월 1회 관리)</p>
-             <div class="grid md:grid-cols-2 gap-6">
-                <div class="border-l-4 border-blue-500 pl-4">
-                    <h4 class="font-bold">주요 내용</h4>
-                    <ul class="list-disc list-inside text-gray-600">
-                        <li>학습 플래너 작성 및 점검</li>
-                        <li>과목별 공부법 및 시간 관리 코칭</li>
-                        <li>목표 설정 및 동기 부여</li>
+            <h2 class="text-3xl font-bold mb-4">② 중등 자기주도학습·입시 컨설팅 (학생 대상)</h2>
+            <div class="grid md:grid-cols-2 gap-8 mt-6">
+                 <div>
+                    <h4 class="font-bold text-lg mb-2 text-blue-600">주요 내용</h4>
+                    <ul class="list-disc list-inside space-y-2 text-gray-700">
+                        <li>특목·자사고 및 고등학교 입시 준비 전략</li>
+                        <li>고등·대학 입시를 함께 내다보는 자기주도학습 관리법</li>
+                        <li>수행평가·탐구 보고서 코칭, 진로 연계 활동 설계</li>
                     </ul>
                 </div>
-                <div class="border-l-4 border-green-500 pl-4">
-                    <h4 class="font-bold">이런 학생에게 추천</h4>
-                    <ul class="list-disc list-inside text-gray-600">
-                        <li>공부 습관을 만들고 싶은 학생</li>
-                        <li>계획적인 학습이 어려운 학생</li>
+                <div>
+                    <h4 class="font-bold text-lg mb-2 text-green-600">이런 학생에게 추천</h4>
+                    <ul class="list-disc list-inside space-y-2 text-gray-700">
+                        <li>특목고·자사고 진학을 고민하는 학생</li>
+                        <li>자기주도학습 방법을 체계적으로 배우고 싶은 학생</li>
+                        <li>진로와 활동을 어떻게 연결해야 할지 막막한 학생</li>
                     </ul>
                 </div>
             </div>
         </section>
 
-        <!-- 초등 학부모 코칭 -->
         <section id="elementary" class="bg-white p-8 rounded-lg shadow-lg">
-            <h2 class="text-3xl font-bold mb-4">초등 학부모 코칭 (초1 ~ 초5)</h2>
-            <p class="text-gray-700 mb-6">학생이 아닌, 부모님이 바뀌어야 아이가 성장합니다. 우리 아이를 위한 최고의 조력자가 되는 법을 알려드립니다.</p>
-             <div class="grid md:grid-cols-2 gap-6">
-                <div class="border-l-4 border-blue-500 pl-4">
-                    <h4 class="font-bold">주요 내용</h4>
-                    <ul class="list-disc list-inside text-gray-600">
-                        <li>자녀의 학습 잠재력 파악하기</li>
-                        <li>올바른 공부 환경 조성법</li>
-                        <li>독서 지도 및 교과 연계 학습법</li>
+            <h2 class="text-3xl font-bold mb-4">① 초등 자기주도학습 컨설팅 (학부모 대상)</h2>
+            <div class="grid md:grid-cols-2 gap-8 mt-6">
+                 <div>
+                    <h4 class="font-bold text-lg mb-2 text-blue-600">주요 내용</h4>
+                    <ul class="list-disc list-inside space-y-2 text-gray-700">
+                        <li>‘공부를 취미로 만드는’ 자기주도학습 비법 전수</li>
+                        <li>가정에서 실천 가능한 학습 루틴 설계</li>
+                        <li>독서·탐구·생활 습관을 활용한 동기부여 전략</li>
                     </ul>
                 </div>
-                <div class="border-l-4 border-green-500 pl-4">
-                    <h4 class="font-bold">이런 학부모님께 추천</h4>
-                    <ul class="list-disc list-inside text-gray-600">
-                        <li>자녀 교육에 확신이 없는 분</li>
-                        <li>아이의 공부 습관을 잡아주고 싶은 분</li>
+                <div>
+                    <h4 class="font-bold text-lg mb-2 text-green-600">이런 학부모에게 추천</h4>
+                    <ul class="list-disc list-inside space-y-2 text-gray-700">
+                        <li>아이가 공부를 즐겁게 시작할 수 있는 방법을 찾고 싶은 부모</li>
+                        <li>성적보다 습관과 태도를 먼저 길러주고 싶은 부모</li>
+                        <li>장기적으로 자기주도학습 역량을 키우고 싶은 부모</li>
                     </ul>
                 </div>
             </div>
         </section>
         
-        <!-- Contact Section -->
         <section id="contact" class="mt-20 py-20 bg-gray-800 text-white text-center rounded-lg">
              <div class="container mx-auto px-6">
                 <h2 class="text-4xl font-bold">궁금한 점이 있으신가요?</h2>
@@ -113,6 +106,5 @@
     <footer class="text-center py-6 bg-gray-100 mt-12">
         <p>© 2025 SehyunT 조세연 | 문의: ahrah0365@gmail.com</p>
     </footer>
-
 </body>
 </html>
