--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body class="bg-gray-50">
 
-    <!-- Header & Navigation -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="text-2xl font-bold text-gray-800">SehyunT</a>
@@ -17,25 +16,21 @@
                 <li><a href="about.html" class="text-gray-600 hover:text-blue-600">선생님 소개</a></li>
                 <li><a href="consulting.html" class="text-gray-600 hover:text-blue-600">컨설팅 프로그램</a></li>
                 <li><a href="store.html" class="text-gray-600 hover:text-blue-600">자료/강의</a></li>
-                <li><a href="https://tally.so/r/w4l51A" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
+                <li><a href="https://tally.so/r/w7Jqdz" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <!-- Hero Section -->
         <section class="hero text-center py-20 bg-white">
             <h1 class="text-5xl font-extrabold text-gray-900">결과로 증명하는 입시 전략</h1>
             <h2 class="text-xl text-gray-600 mt-4 max-w-2xl mx-auto">세연쌤과 함께라면 막막한 입시는 가장 강력한 무기가 됩니다.</h2>
-            <a href="https://tally.so/r/w4l51A" target="_blank" class="mt-8 inline-block bg-blue-600 text-white text-lg font-semibold px-8 py-3 rounded-lg hover:bg-blue-700 transition">지금 바로 상담 신청하기</a>
+            <a href="https://tally.so/r/w7Jqdz" target="_blank" class="mt-8 inline-block bg-blue-600 text-white text-lg font-semibold px-8 py-3 rounded-lg hover:bg-blue-700 transition">지금 바로 상담 신청하기</a>
         </section>
 
-        <!-- 이미지 슬라이더 (기존 코드 유지 또는 개선) -->
         <div class="slider-container my-12">
-            <!-- 슬라이더 HTML은 기존과 동일하게 사용 -->
-        </div>
+            </div>
 
-        <!-- Services Section -->
         <section id="services" class="py-16">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-3xl font-bold mb-2">세연쌤 컨설팅 프로그램</h2>
@@ -60,7 +55,6 @@
             </div>
         </section>
 
-        <!-- Testimonials Section (새로 추가) -->
         <section id="testimonials" class="py-16 bg-white">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-3xl font-bold mb-12">성공 사례가 증명합니다</h2>
@@ -84,12 +78,11 @@
             </div>
         </section>
 
-        <!-- Contact Section -->
         <section id="contact" class="py-20 bg-gray-800 text-white text-center">
              <div class="container mx-auto px-6">
                 <h2 class="text-4xl font-bold">변화는 지금 시작됩니다</h2>
                 <p class="text-lg text-gray-300 mt-4">망설이는 순간, 경쟁자는 이미 앞서가고 있습니다.<br>세연쌤과의 1:1 상담으로 합격의 문을 여세요.</p>
-                <a href="https://tally.so/r/w4l51A" target="_blank" class="mt-8 inline-block bg-white text-blue-600 text-xl font-bold px-10 py-4 rounded-lg hover:bg-gray-200 transition">
+                <a href="https://tally.so/r/w7Jqdz" target="_blank" class="mt-8 inline-block bg-white text-blue-600 text-xl font-bold px-10 py-4 rounded-lg hover:bg-gray-200 transition">
                     1:1 맞춤 상담 신청하기
                 </a>
              </div>
@@ -102,4 +95,3 @@
 
 </body>
 </html>
-
