--- a/consulting.html
+++ b/consulting.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50">
+    <!-- Navigation -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="text-2xl font-bold text-gray-800">SehyunT</a>
@@ -14,7 +15,7 @@
                 <li><a href="about.html" class="text-gray-600 hover:text-blue-600">선생님 소개</a></li>
                 <li><a href="consulting.html" class="font-bold text-blue-600">컨설팅 프로그램</a></li>
                 <li><a href="store.html" class="text-gray-600 hover:text-blue-600">자료/강의</a></li>
-                <li><a href="https://tally.so/r/w7Jqdz" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
+                <li><a href="https://tally.so/r/w4l51A" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
             </ul>
         </nav>
     </header>
@@ -25,6 +26,7 @@
             <p class="text-lg text-gray-600 mt-4">세연쌤의 전문적인 컨설팅은 학생의 잠재력을 100% 끌어냅니다.</p>
         </div>
 
+        <!-- 고등 입시 전략 컨설팅 -->
         <section id="high" class="mb-16 bg-white p-8 rounded-lg shadow-lg">
             <h2 class="text-3xl font-bold mb-4">③ 고등 입시 전략 컨설팅 (학생 대상)</h2>
             <div class="grid md:grid-cols-2 gap-8 mt-6">
@@ -48,6 +50,7 @@
             </div>
         </section>
 
+        <!-- 중등 자기주도학습·입시 컨설팅 -->
         <section id="middle" class="mb-16 bg-white p-8 rounded-lg shadow-lg">
             <h2 class="text-3xl font-bold mb-4">② 중등 자기주도학습·입시 컨설팅 (학생 대상)</h2>
             <div class="grid md:grid-cols-2 gap-8 mt-6">
@@ -70,6 +73,7 @@
             </div>
         </section>
 
+        <!-- 초등 자기주도학습 컨설팅 -->
         <section id="elementary" class="bg-white p-8 rounded-lg shadow-lg">
             <h2 class="text-3xl font-bold mb-4">① 초등 자기주도학습 컨설팅 (학부모 대상)</h2>
             <div class="grid md:grid-cols-2 gap-8 mt-6">
@@ -92,19 +96,31 @@
             </div>
         </section>
         
+        <!-- Contact Section -->
         <section id="contact" class="mt-20 py-20 bg-gray-800 text-white text-center rounded-lg">
              <div class="container mx-auto px-6">
                 <h2 class="text-4xl font-bold">궁금한 점이 있으신가요?</h2>
                 <p class="text-lg text-gray-300 mt-4">지금 바로 1:1 상담을 통해 명쾌한 해답을 얻으세요.</p>
-                <a href="https://tally.so/r/w7Jqdz" target="_blank" class="mt-8 inline-block bg-white text-blue-600 text-xl font-bold px-10 py-4 rounded-lg hover:bg-gray-200 transition">
+                <a href="https://tally.so/r/w4l51A" target="_blank" class="mt-8 inline-block bg-white text-blue-600 text-xl font-bold px-10 py-4 rounded-lg hover:bg-gray-200 transition">
                     1:1 맞춤 상담 신청하기
                 </a>
              </div>
         </section>
     </main>
 
-    <footer class="text-center py-6 bg-gray-100 mt-12">
-        <p>© 2025 SehyunT 조세연 | 문의: ahrah0365@gmail.com</p>
+    <footer class="text-center py-10 bg-gray-100 mt-12">
+        <div class="mb-4">
+            <h4 class="font-semibold text-gray-700">SehyunT Blogs</h4>
+            <div class="flex justify-center space-x-4 mt-2 text-sm text-gray-600">
+                <a href="https://blog.naver.com/ahrahsehyun" target="_blank" class="hover:underline">자기주도학습/입시</a>
+                <span>|</span>
+                <a href="https://sehyunt-logic.tistory.com/" target="_blank" class="hover:underline">시사/토론</a>
+                <span>|</span>
+                <a href="https://sehyunt-study.tistory.com/" target="_blank" class="hover:underline">면접 문제</a>
+            </div>
+        </div>
+        <p class="text-sm text-gray-500">© 2025 SehyunT 조세연 | 문의: ahrah0365@gmail.com</p>
     </footer>
 </body>
 </html>
+
