--- a/store.html
+++ b/store.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자료/강의 - SehyunT</title>
+    <title>자료/강의 스토어 - SehyunT</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- 토스페이먼츠 SDK -->
     <script src="https://js.tosspayments.com/v1/payment"></script>
 </head>
 <body class="bg-gray-50">
-
-    <!-- Navigation (index.html과 동일하게 유지) -->
+    <!-- Navigation -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="text-2xl font-bold text-gray-800">SehyunT</a>
@@ -18,67 +17,87 @@
                 <li><a href="about.html" class="text-gray-600 hover:text-blue-600">선생님 소개</a></li>
                 <li><a href="consulting.html" class="text-gray-600 hover:text-blue-600">컨설팅 프로그램</a></li>
                 <li><a href="store.html" class="font-bold text-blue-600">자료/강의</a></li>
-                <li><a href="#contact" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
+                <li><a href="https://tally.so/r/w4l51A" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="container mx-auto px-6 py-12">
         <div class="text-center mb-16">
-            <h1 class="text-4xl font-extrabold text-gray-900">시간을 아껴주는 입시 치트키</h1>
-            <p class="text-lg text-gray-600 mt-4">세연쌤이 직접 제작한 핵심 자료와 강의로 합격에 가까워지세요.</p>
+            <h1 class="text-4xl font-extrabold text-gray-900">SehyunT 프리미엄 자료실</h1>
+            <p class="text-lg text-gray-600 mt-4">합격생들이 증명한 입시 성공의 핵심 노하우를 만나보세요.</p>
         </div>
 
         <!-- Products Grid -->
-        <div class="grid md:grid-cols-3 lg:grid-cols-4 gap-8">
-            <!-- Product Item 1 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                <img src="https://placehold.co/400x300/E2E8F0/4A5568?text=전자책+표지" alt="전자책 썸네일" class="w-full h-48 object-cover">
-                <div class="p-6">
-                    <h3 class="font-bold text-lg mb-2">생기부 필살기 전자책 (2025 ver.)</h3>
-                    <p class="text-gray-600 text-sm mb-4">이 책 하나로 생기부 걱정 끝! 합격하는 생기부의 모든 것을 담았습니다.</p>
-                    <div class="flex justify-between items-center">
-                        <span class="font-bold text-xl">35,000원</span>
-                        <button onclick="purchaseItem('생기부 필살기 전자책', 35000)" class="bg-blue-600 text-white px-4 py-2 rounded-md text-sm font-semibold hover:bg-blue-700">바로 구매</button>
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <!-- 예시 상품 1 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden flex flex-col">
+                <!-- 상품 이미지를 images/ebook_cover1.jpg 등으로 교체해주세요 -->
+                <img src="https://placehold.co/400x300/E2E8F0/4A5568?text=전자책+표지" alt="전자책 1" class="w-full h-48 object-cover">
+                <div class="p-6 flex flex-col flex-grow">
+                    <h3 class="text-xl font-bold mb-2">생기부 완성을 위한 필독서</h3>
+                    <p class="text-gray-600 mb-4 flex-grow">세특, 행특, 자율활동 등 생활기록부의 모든 것을 담은 A to Z 가이드북</p>
+                    <div class="mt-auto">
+                        <span class="text-2xl font-bold text-gray-900">25,000원</span>
+                        <button onclick="purchaseItem('생기부 필독서', 25000)" class="mt-2 w-full bg-blue-600 text-white font-semibold py-2 rounded-md hover:bg-blue-700">바로 구매하기</button>
                     </div>
                 </div>
             </div>
-            <!-- Product Item 2 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                <img src="https://placehold.co/400x300/E2E8F0/4A5568?text=VOD+강의" alt="VOD 강의 썸네일" class="w-full h-48 object-cover">
-                <div class="p-6">
-                    <h3 class="font-bold text-lg mb-2">면접 특강 VOD</h3>
-                    <p class="text-gray-600 text-sm mb-4">압박 면접도 자신있게! 면접관을 사로잡는 실전 답변 전략 강의.</p>
-                    <div class="flex justify-between items-center">
-                        <span class="font-bold text-xl">50,000원</span>
-                        <button onclick="purchaseItem('면접 특강 VOD', 50000)" class="bg-blue-600 text-white px-4 py-2 rounded-md text-sm font-semibold hover:bg-blue-700">바로 구매</button>
+            <!-- 예시 상품 2 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden flex flex-col">
+                 <!-- 상품 이미지를 images/vod_thumb1.jpg 등으로 교체해주세요 -->
+                <img src="https://placehold.co/400x300/A2B3C4/FFFFFF?text=VOD+썸네일" alt="VOD 강의 1" class="w-full h-48 object-cover">
+                <div class="p-6 flex flex-col flex-grow">
+                    <h3 class="text-xl font-bold mb-2">자기주도학습 VOD 특강</h3>
+                    <p class="text-gray-600 mb-4 flex-grow">성적을 올리는 가장 확실한 방법, 메타인지를 활용한 학습법 완벽 정리</p>
+                    <div class="mt-auto">
+                        <span class="text-2xl font-bold text-gray-900">50,000원</span>
+                        <button onclick="purchaseItem('자기주도학습 VOD', 50000)" class="mt-2 w-full bg-blue-600 text-white font-semibold py-2 rounded-md hover:bg-blue-700">바로 구매하기</button>
                     </div>
                 </div>
             </div>
-            <!-- 추가 상품들을 여기에 배치 -->
+            <!-- 추가 상품들을 여기에 넣으세요 -->
         </div>
     </main>
+    
+    <footer class="text-center py-10 bg-gray-100 mt-12">
+        <div class="mb-4">
+            <h4 class="font-semibold text-gray-700">SehyunT Blogs</h4>
+            <div class="flex justify-center space-x-4 mt-2 text-sm text-gray-600">
+                <a href="https://blog.naver.com/ahrahsehyun" target="_blank" class="hover:underline">자기주도학습/입시</a>
+                <span>|</span>
+                <a href="https://sehyunt-logic.tistory.com/" target="_blank" class="hover:underline">시사/토론</a>
+                <span>|</span>
+                <a href="https://sehyunt-study.tistory.com/" target="_blank" class="hover:underline">면접 문제</a>
+            </div>
+        </div>
+        <p class="text-sm text-gray-500">© 2025 SehyunT 조세연 | 문의: ahrah0365@gmail.com</p>
+    </footer>
 
     <script>
-        const clientKey = 'test_ck_D5GePWvyJnrK0W0k6q8gLzN97Eoq'; // 실제 키로 변경 필요
+        // 토스페이먼츠 클라이언트 키 (실제 라이브 키로 교체 필요)
+        const clientKey = 'test_ck_D5GePWvyJnrK0W0k6q8gLzN97Eoq';
         const tossPayments = TossPayments(clientKey);
 
         function purchaseItem(itemName, price) {
+            const orderId = 'ORDER_' + new Date().getTime() + Math.random();
+            
             tossPayments.requestPayment('카드', {
                 amount: price,
-                orderId: 'ORDER_' + new Date().getTime(),
+                orderId: orderId,
                 orderName: itemName,
-                customerName: '구매자', // 실제로는 사용자 정보 받기
-                successUrl: window.location.origin + '/success.html', // 성공 시 이동할 페이지
-                failUrl: window.location.origin + '/fail.html',     // 실패 시 이동할 페이지
+                customerName: '구매자',
+                successUrl: window.location.origin + '/success.html', // 성공시 이동할 페이지
+                failUrl: window.location.origin + '/fail.html',       // 실패시 이동할 페이지
             }).catch(function (error) {
                 if (error.code === 'USER_CANCEL') {
-                    alert('결제를 취소하셨습니다.');
+                    console.log('결제를 취소했습니다.');
                 } else {
-                    alert('결제 오류: ' + error.message);
+                    console.error('결제 오류:', error.message);
                 }
             });
         }
     </script>
 </body>
 </html>
+
