--- a/index.html
+++ b/index.html
@@ -32,13 +32,24 @@
             <a href="https://tally.so/r/w4l51A" target="_blank" class="mt-8 inline-block bg-blue-600 text-white text-lg font-semibold px-8 py-3 rounded-lg hover:bg-blue-700 transition">지금 바로 상담 신청하기</a>
         </section>
 
-        <!-- 업그레이드된 이미지 슬라이더 -->
+        <!-- 14개 이미지로 확장된 슬라이더 -->
         <div class="slider-viewport my-16">
             <div class="slider-container" id="slider-container">
-                <!-- 이미지는 images 폴더 안에 있어야 합니다 -->
+                <!-- 이미지는 images 폴더 안에 slide1.jpg ~ slide14.jpg 이름으로 있어야 합니다. -->
                 <div class="slide"><img src="images/slide1.jpg" alt="합격 사례 1"></div>
                 <div class="slide"><img src="images/slide2.jpg" alt="합격 사례 2"></div>
                 <div class="slide"><img src="images/slide3.jpg" alt="합격 사례 3"></div>
+                <div class="slide"><img src="images/slide4.jpg" alt="합격 사례 4"></div>
+                <div class="slide"><img src="images/slide5.jpg" alt="합격 사례 5"></div>
+                <div class="slide"><img src="images/slide6.jpg" alt="합격 사례 6"></div>
+                <div class="slide"><img src="images/slide7.jpg" alt="합격 사례 7"></div>
+                <div class="slide"><img src="images/slide8.jpg" alt="합격 사례 8"></div>
+                <div class="slide"><img src="images/slide9.jpg" alt="합격 사례 9"></div>
+                <div class="slide"><img src="images/slide10.jpg" alt="합격 사례 10"></div>
+                <div class="slide"><img src="images/slide11.jpg" alt="합격 사례 11"></div>
+                <div class="slide"><img src="images/slide12.jpg" alt="합격 사례 12"></div>
+                <div class="slide"><img src="images/slide13.jpg" alt="합격 사례 13"></div>
+                <div class="slide"><img src="images/slide14.jpg" alt="합격 사례 14"></div>
             </div>
             <button class="slider-btn prev" onclick="moveSlide(-1)">&#10094;</button>
             <button class="slider-btn next" onclick="moveSlide(1)">&#10095;</button>
